@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.microsoft.identity.msal"
+    xmlns:tools="http://schemas.android.com/tools"
     android:versionCode="1"
     android:versionName="1.0">
 
@@ -18,7 +18,10 @@
 
         <activity android:name="com.microsoft.identity.client.TestActivity" />
 
-        <activity android:name="com.microsoft.identity.client.BrowserTabActivity">
+        <activity
+            tools:replace="android:exported"
+            android:name="com.microsoft.identity.client.BrowserTabActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
